--- a/src/styles/pages/index.module.css
+++ b/src/styles/pages/index.module.css
@@ -46,6 +46,7 @@
 .digitalShow {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    align-items: start;
     gap: 0;
     margin: 1rem;
 }
@@ -57,6 +58,7 @@
 .filmShow {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    align-items: start;
     gap: 0;
     margin: 1rem;
 }
